finished all courses page

--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -10,12 +10,13 @@
         </div>
     </article>
 
-    <table id="table" class="table is-striped is-fullwidth">
+    <table id="table" class="table is-striped is-fullwidth pb-5">
+        <h2 class="title is-4">My Courses</h2>
         <thead>
             <th><abbr title="Abbreviation">Abbr</abbr></th>
             <th>Number</th>
             <th>Description</th>
-            <th>Credit</th>
+            <th>Credits</th>
             <th>Offering</th>
             <th class="clickable has-text-link" style="text-decoration:underline;">Year offered</th>
         </thead>
@@ -29,6 +30,174 @@
                 <td>[[=row.offering]]</td>
                 <td>[[=row.year]]</td>
 
+            </tr>
+            [[pass]]
+
+        </tbody>
+    </table>
+
+    <table id="table" class="table is-striped is-fullwidth pt-5">
+        <h2 class="title is-4">Public Courses - CSE 2023-24</h2>
+        <thead>
+            <th><abbr title="Abbreviation">Abbr</abbr></th>
+            <th>Number</th>
+            <th>Description</th>
+            <th>Credits</th>
+            <th>Offering</th>
+            <th class="clickable has-text-link" style="text-decoration:underline;">Year Offered</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>CSE 12</td>
+                <td>12</td>
+                <td>Computer Systems and Assembly Language</td>
+                <td>7</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 13S</td>
+                <td>13S</td>
+                <td>Computer Systems and C Programming</td>
+                <td>7</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 16</td>
+                <td>16</td>
+                <td>Applied Discrete Mathematics</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 20</td>
+                <td>20</td>
+                <td>Beginning Programming in Python</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 30</td>
+                <td>30</td>
+                <td>Programming Abstractions: Python</td>
+                <td>7</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 101</td>
+                <td>101</td>
+                <td>Intro to Data Strutures and Algorithms</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 102</td>
+                <td>102</td>
+                <td>Analysis of Algorithms</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 103</td>
+                <td>103</td>
+                <td>Computational Models</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 120</td>
+                <td>120</td>
+                <td>Computer Architecture</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 130</td>
+                <td>130</td>
+                <td>Principles of Computer Systems Design</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 114A</td>
+                <td>114A</td>
+                <td>Foundations of Programming Lanugages</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 138</td>
+                <td>138</td>
+                <td>Distributed Systems</td>
+                <td>5</td>
+                <td>Fall, Winter</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 140</td>
+                <td>140</td>
+                <td>Artificial Intelligence</td>
+                <td>5</td>
+                <td>Fall, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 150</td>
+                <td>150</td>
+                <td>Intro to Computer Networks</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 160</td>
+                <td>160</td>
+                <td>Intro to Computer Graphics</td>
+                <td>5</td>
+                <td>Winter, Spring</td>
+                <td>2024</td>
+            </tr>
+            <tr>
+                <td>CSE 168</td>
+                <td>168</td>
+                <td>Intro to Augmented Reality and Virtual Reality</td>
+                <td>7</td>
+                <td>Fall</td>
+                <td>2023</td>
+            </tr>
+            <tr>
+                <td>CSE 180</td>
+                <td>180</td>
+                <td>Database Systems I</td>
+                <td>5</td>
+                <td>Fall, Winter</td>
+                <td>2023-24</td>
+            </tr>
+            <tr>
+                <td>CSE 183</td>
+                <td>183</td>
+                <td>Web Applications</td>
+                <td>5</td>
+                <td>Spring</td>
+                <td>2024</td>
+            </tr>
+            <tr>
+                <td>CSE 185S</td>
+                <td>185S</td>
+                <td>Technical Writing and Communication</td>
+                <td>5</td>
+                <td>Fall, Winter, Spring</td>
+                <td>2023-24</td>
             </tr>
             [[pass]]
 
