--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -1,20 +1,21 @@
 [[extend 'layout.html']]
 
+<title>Course Planner</title>
+
 <style>
     [v-cloak] {
         display: none;
     }
-
+    
     .subheader {
         margin-top: 10px;
         font-size: 13px;
     }
-
+    
     .subheader a {
         text-decoration: underline;
-
     }
-
+    
     .hide,
     .hidden {
         display: none;
@@ -167,16 +168,16 @@
 
 
 
+        </div>
     </div>
-</div>
-[[block page_scripts]]
-<!-- Loads the index-specific js for Vue -->
-<script>
-    let add_course_url = "[[=XML(add_course_url)]]";
-    let delete_course_url = "[[=XML(delete_course_url)]]";
-    let edit_course_url = "[[=XML(edit_course_url)]]";
-    let share_courses_url = "[[=XML(share_courses_url)]]";
-</script>
-<script src="js/index.js"></script>
-<script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
-[[end]]
+    [[block page_scripts]]
+    <!-- Loads the index-specific js for Vue -->
+    <script>
+        let add_course_url = "[[=XML(add_course_url)]]";
+        let delete_course_url = "[[=XML(delete_course_url)]]";
+        let edit_course_url = "[[=XML(edit_course_url)]]";
+        let share_courses_url = "[[=XML(share_courses_url)]]";
+    </script>
+    <script src="js/index.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
+    [[end]]
