--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -37,7 +37,7 @@
                         </a>
                     </h2>
                     <h2 id="no_table">
-                        Add a course to your planner. You can add a course by going to the course search page.
+                        Your planner is empty. Add a course to your planner by going to the course search page.
                     </h2>
                     <!-- Current courses list goes here -->
                     <div id="table">
