added help page

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -1,81 +1,84 @@
 <!DOCTYPE html>
 <style>
-  .menu {
-    position: relative;
-    z-index: 1000;
-  }
+    .menu {
+        position: relative;
+        z-index: 1000;
+    }
 </style>
 <html lang="en">
-  <head>
+
+<head>
     <base href="[[=URL('static')]]/">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
+    <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA==" />
     <link rel="stylesheet" href="css/bulma.css">
     <link rel="stylesheet" href="css/meow.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
-    [[block page_head]]<!-- individual pages can customize header here -->[[end]]
-  </head>
-  <body>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css"> [[block page_head]]
+    <!-- individual pages can customize header here -->[[end]]
+</head>
+
+<body>
     <!-- Navigation bar -->
     <nav class="navbar is-info " role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="[[=URL('index')]]">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="[[=URL('index')]]">
           Course Planner
           <!-- <img class="logo" width="150" src="images/site_icon.png"> -->
         </a>
 
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="the-navbar-menu"
-           onclick="this.classList.toggle('is-active');document.getElementById(this.dataset.target).classList.toggle('is-active');">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="the-navbar-menu" onclick="this.classList.toggle('is-active');document.getElementById(this.dataset.target).classList.toggle('is-active');">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
 
-      <div id="the-navbar-menu" class="navbar-menu">
-        <div class="navbar-start">
-          <div class="navbar-brand">
-            <a class="navbar-item is-primary is-vcentered" href="[[=URL('share')]]">View a Peer's Planner</a>
-          </div>
-          <div class="navbar-brand">
-            <a class="navbar-item is-primary is-vcentered" href="[[=URL('grades/calculator')]]">Grade Calculator</a>
-          </div>
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link is-primary is-vcentered">
+        <div id="the-navbar-menu" class="navbar-menu">
+            <div class="navbar-start">
+                <div class="navbar-brand">
+                    <a class="navbar-item is-primary is-vcentered" href="[[=URL('share')]]">View a Peer's Planner</a>
+                </div>
+                <div class="navbar-brand">
+                    <a class="navbar-item is-primary is-vcentered" href="[[=URL('grades/calculator')]]">Grade Calculator</a>
+                </div>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link is-primary is-vcentered">
               Courses
             </a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item" href="[[=URL('course/search')]]">Search</a>
-              <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
-              <a class="navbar-item" href="[[=URL('course/history')]]">Enrollment History</a>
-              <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" href="[[=URL('course/create')]]">Create Course</a>
+                        <a class="navbar-item" href="[[=URL('course/search')]]">Course Search</a>
+                        <a class="navbar-item" href="[[=URL('course/history')]]">Enrollment History</a>
+                        <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
+                    </div>
+                </div>
+                <div class="navbar-brand">
+                    <a class="navbar-item is-primary is-vcentered" href="[[=URL('help')]]">Help</a>
+                </div>
             </div>
-          </div>
-        </div>
 
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              [[if globals().get('user'):]]
-                <div class="navbar-item has-dropdown is-hoverable">
-                  <a class="navbar-link is-primary is-vcentered">
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        [[if globals().get('user'):]]
+                        <div class="navbar-item has-dropdown is-hoverable">
+                            <a class="navbar-link is-primary is-vcentered">
                     [[=globals().get('user').get('username')]]
                   </a>
-                  <div class="navbar-dropdown is-right">
-                    <a class="navbar-item" href="[[=URL('user/profile')]]">Profile</a>
-                    <a class="navbar-item " href="[[=URL('auth/change_password')]]">Change Password</a></li>
-                    <a class="navbar-item" href="[[=URL('auth/logout')]]">Logout</a>
-                  </div>
+                            <div class="navbar-dropdown is-right">
+                                <a class="navbar-item" href="[[=URL('user/profile')]]">Profile</a>
+                                <a class="navbar-item " href="[[=URL('auth/change_password')]]">Change Password</a></li>
+                                <a class="navbar-item" href="[[=URL('auth/logout')]]">Logout</a>
+                            </div>
+                        </div>
+                        [[else:]]
+                        <a class="button is-link" href="[[=URL('auth/register')]]">Sign up</a>
+                        <a class="button is-success" href="[[=URL('auth/login')]]">Log in</a> [[pass]]
+                    </div>
                 </div>
-              [[else:]]
-                <a class="button is-link" href="[[=URL('auth/register')]]">Sign up</a>
-                <a class="button is-success" href="[[=URL('auth/login')]]">Log in</a>
-              [[pass]]
             </div>
-          </div>
         </div>
-      </div>
     </nav>
 
     <!-- beginning of HTML inserted by extending template -->
@@ -83,10 +86,12 @@
     <!-- end of HTML inserted by extending template -->
     <footer class="footer">
     </footer>
-  </body>
-  <script src="js/sugar.min.js"></script>
-  <script src="js/axios.min.js"></script>
-  <script src="js/vue.js"></script>
-  <script src="js/utils.js"></script>
-  [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
+</body>
+<script src="js/sugar.min.js"></script>
+<script src="js/axios.min.js"></script>
+<script src="js/vue.js"></script>
+<script src="js/utils.js"></script>
+[[block page_scripts]]
+<!-- individual pages can add scripts here -->[[end]]
+
 </html>
