--- a/apps/courseplanner/templates/calculator.html
+++ b/apps/courseplanner/templates/calculator.html
@@ -25,17 +25,17 @@
             <h1 class="title">Grade Calculator</h1>
             <div class="select mb-4">
                 <select class="input" @change="selectCourse($event)">
-                <option value="">Choose a course</option>
+                <option value="">Choose a Course</option>
                 <option v-for="course in courses" :value="course.id">{{course.name}}</option>
                 </select>
             </div>
-            <p>Grade calculator with percentage grades</p>
+            <p>Grade Calculator: Calculates course grade using percentages</p>
             <div class="field">
                 <div class="table-container">
                     <table id="grade-table" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
                         <thead>
                             <tr>
-                                <th class="has-text-centered">Category<br>(optional)</th>
+                                <th class="has-text-centered">Category<br>(Optional)</th>
                                 <th class="has-text-centered">Grade (%)</th>
                                 <th class="has-text-centered">Weight (%)</th>
                             </tr>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="field mt-5">
-                <button id="add-row-button" class="button is-link is-fullwidth" @click="addRow">Add row</button>
+                <button id="add-row-button" class="button is-link is-fullwidth" @click="addRow">Add Row</button>
             </div>
 
             <div class="field">
