--- a/apps/courseplanner/templates/help.html
+++ b/apps/courseplanner/templates/help.html
@@ -2,21 +2,24 @@
 
 <title>Help</title>
 
+
 <div class="section" id="vue-target" v-cloak>
     <h1 class="title">Need Help?</h1>
     <h1 class="title is-4">Getting Started</h1>
     <article class="message is-info">
         <div class="message-body">
-            First, go to the <b>Create Course</b> page under the Courses menu, and create the courses you want. The courses you create will be displayed on the <b>All Courses</b> page under the Courses menu. Once you are finished creating courses, you
-            can go to the <b>Course Search</b> page under the Courses menu and look for a course that you have created. When you click Submit on the Course Search form, you can then add a course to your planner, edit a course, or delete the course from
-            your planner. Your planner on the home page will be updated with your changes accordingly.
+            First, go to the <a href="[[=URL('course/create')]]" style="text-decoration: none"><b>Create Course</b></a> page under the Courses menu, and create the courses you want. The courses you create will be displayed on the
+            <a href="[[=URL('course/all')]]" style="text-decoration: none"><b>All Courses</b></a> page under the Courses menu. Once you are finished creating courses, you can go to the
+            <a href="[[=URL('course/search')]]" style="text-decoration: none"><b>Course Search</b></a> page under the Courses menu and look for a course that you have created. When you click Submit on the Course Search form, you can then add a course
+            to your planner, edit a course, or delete the course from your planner. Your planner on the home page will be updated with your changes accordingly.
         </div>
     </article>
     <h1 class="title is-4">Calculating Grades</h1>
     <article class="message is-info">
         <div class="message-body">
             Once you have added courses to your planner, you can calculate your grade for a course and your overall GPA after taking a course on the
-            <b>Grade Calculator</b> page. First, choose a course from the dropdown menu, and click Add Row to enter an assignment grade. Once you are done adding your assignment grades, you can click Save.
+            <a href="[[=URL('grades/calculator')]]" style="text-decoration: none"><b>Grade Calculator</b></a> page. First, choose a course from the dropdown menu, and click Add Row to enter an assignment grade. Once you are done adding your assignment
+            grades, you can click Save.
         </div>
     </article>
     <article class="message is-info">
@@ -28,7 +31,8 @@
     <h1 class="title is-4">Sharing Planners</h1>
     <article class="message is-info">
         <div class="message-body">
-            To help your academic planning, you can view a peer's planner! Head over to the <b>View a Peer's Planner</b> page and search by user or major, and click on a user to view their planner.
+            To help your academic planning, you can view a peer's planner! Head over to the
+            <a href="[[=URL('share')]]" style="text-decoration: none"><b>View a Peer's Planner</b></a> page and search by user or major, and click on a user to view their planner.
         </div>
     </article>
 </div>
