--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -17,26 +17,41 @@
         <h2 class="title is-4">My Courses</h2>
         <!-- table header -->
         <thead>
-            <th><abbr title="Abbreviation">Abbr</abbr></th>
-            <th>Number</th>
+            <th><abbr title="Abbreviation" class="clickable " style="text-decoration:underline;"
+                    @click="sortByAbbr()">Abbr
+                    <i :class="getSortIconClass(abbrFilterOption)"></i></abbr></th>
+            <th class="clickable" style="text-decoration:underline;" @click="sortByNumber()">Number
+                <i :class="getSortIconClass(numberFilterOption)"></i>
+            </th>
             <th>Description</th>
-            <th>Credits</th>
-            <th>Offering</th>
-            <th class="clickable has-text-link" style="text-decoration:underline;">Year Offered</th>
+            <th class="clickable" style="text-decoration:underline;" @click="sortByCredits()">Credits
+                <i :class="getSortIconClass(creditsFilterOption)"></i>
+            </th>
+            <th class="clickable" style="text-decoration:underline;" @click="sortByOffering()">Offering
+                <i :class="getSortIconClass(offeringFilterOption)"></i>
+            </th>
+            <th class="clickable" style="text-decoration:underline;" @click="sortByYear()">Year Offered
+                <i :class="getSortIconClass(yearFilterOption)"></i>
+            </th>
         </thead>
         <!-- Created Courses -->
         <tbody>
-            [[for row in rows:]]
-            <tr>
-                <td>[[=row.abbreviation]]</td>
+            <!-- [[for row in rows:]] -->
+            <tr v-for="row in rows">
+                <!-- <td>[[=row.abbreviation]]</td>
                 <td>[[=row.number]]</td>
                 <td>[[=row.description]]</td>
                 <td>[[=row.credits]]</td>
                 <td>[[=row.offering]]</td>
-                <td>[[=row.year]]</td>
-
+                <td>[[=row.year]]</td> -->
+                <td>{{row.abbreviation}}</td>
+                <td>{{row.number}}</td>
+                <td>{{row.description}}</td>
+                <td>{{row.credits}}</td>
+                <td>{{row.offering}}</td>
+                <td>{{row.year}}</td>
             </tr>
-            [[pass]]
+            <!-- [[pass]] -->
 
         </tbody>
     </table>
@@ -217,3 +232,11 @@
 
 
 </div>
+
+
+[[block page_scripts]]
+<script>
+    let get_user_courses_url = "[[=XML(get_user_courses_url)]]";
+</script>
+<script src="js/course_list.js"></script>
+[[end]]
